src/component/ical/component/snapshots/caldata__component__ical__component__timezone__tests__0_trunc.snap
---
source: src/component/ical/component/timezone.rs
expression: tz.generate()
---
BEGIN:VTIMEZONE
TZID:Europe/Bratislava
TZID-ALIAS-OF:Europe/Prague
LAST-MODIFIED:20260124T185655Z
X-LIC-LOCATION:Europe/Bratislava
X-PROLEPTIC-TZNAME:LMT
BEGIN:STANDARD
DTSTART:19790101T000000
END:STANDARD
BEGIN:DAYLIGHT
DTSTART:19790401T020000
RRULE:FREQ=YEARLY;BYMONTH=4;BYDAY=1SU;UNTIL=19800406T010000Z
END:DAYLIGHT
BEGIN:STANDARD
DTSTART:19790930T030000
RRULE:FREQ=YEARLY;BYMONTH=9;BYDAY=-1SU;UNTIL=19950924T010000Z
END:STANDARD
BEGIN:DAYLIGHT
DTSTART:19810329T020000
RRULE:FREQ=YEARLY;BYMONTH=3;BYDAY=-1SU
END:DAYLIGHT
BEGIN:STANDARD
DTSTART:19961027T030000
RRULE:FREQ=YEARLY;BYMONTH=10;BYDAY=-1SU
END:STANDARD
END:VTIMEZONE
